<resources>

    <string name="app_name">Seans App</string>
    <string name="submit">Submit</string>
    <string name="start_chatting">Start chatting</string>
    <string name="selectLoginProvider">Please select your login provider</string>
    <string name="createChannel">Create channel</string>
    <string name="insert_channel_name">\u262e</string>
    <string name="private_channel">Private channel</string>
    <string name="add_channel_members">Add channel members</string>
    <string name="create">Create</string>
    <string name="channel_cannot_be_created">Cannot create channel with this name, try a different emoji</string>
    <string name="add">Add</string>
    <string name="add_users">Add users</string>
    <string name="members">Members</string>

    <string name="dynamicLinkDomain">https://t6c2e.app.goo.gl</string>
    <string name="deepLinkBaseUrl">https://novoda.com/bonfire</string>
    <string name="iosBundleIdentifier">com.novoda.bonfire</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite</string>
    <string name="send_invite">Send invite</string>
    <string name="check_out_bonfire">Check out my App\n%s</string>
    <string name="only_single_emoji_allowed">Channel name must be one emoji character</string>
    <string name="channel_name">Channel Name</string>
    <string name="enjoy_the_awesomeness">Enjoy the emoji awesomeness!</string>
    <string name="login_disclaimer">This application is for demo purposes only.
    Your name and profile picture will be visible to all other users of the application.
    Messages are not encrypted and app developers can see them.
    The database can be erased at any time.</string>

</resources>
